--- a/6/bower.json
+++ b/6/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "spldead.github.io/6",
+  "name": "spldead.github.io",
   "homepage": "/6/index.html",
   "authors": [
     "splDead <spldead@gmail.com>"
